<resources>
    <string name="app_name">Alcoholator</string>

    <string name="hello_string">Hello</string>
    <string name="tell_us_something_about_you">Tell us something about yourself</string>
    <string name="age">Age</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="weight_pounds">Weight (lbs)</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="male_identifies_as_female">Male, but identify as female</string>
    <string name="female_identifies_as_male">Female, but identify as male</string>
    <string name="uncertain">Uncertain</string>
    <string name="go">go</string>
    <string name="couldnt_be_empty">Please, fill out this field</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="you_haven_t_drink_anything_yet">You didn\'t drink anything yet</string>

    <string name="vodka">Vodka</string>
    <string name="jin_tonic">Jinn tonic</string>
    <string name="wine_red">Red wine</string>
    <string name="wine_white">White wine</string>
    <string name="wine_red_cheap">Cheap red wine</string>
    <string name="wine_white_cheap">Cheap white wine</string>
    <string name="fruit_wine_cheap">Cheap fruit wine</string>
    <string name="beer_dark">Dark beer</string>
    <string name="beer_light">Light beer</string>
    <string name="beer_dark_cheap">Cheap dark beer</string>
    <string name="beer_light_cheap">Cheap light beer</string>
    <string name="moonshine">Moonshine</string>
    <string name="spirit">Spirit</string>
    <string name="whiskey">Whisk(e)y</string>
    <string name="whiskey_cheap">Cheap whisk(e)y</string>
    <string name="liquor">Liquor</string>
    <string name="champagne">Champagne</string>
    <string name="cognac">Cognac</string>
    <string name="time_format">%d:%s</string>

    <string name="drunk_state_1">You are completely fine</string>
    <string name="drunk_state_2">You feel normal, slightly relaxed</string>
    <string name="drunk_state_3">You are euphoric, completely relaxed</string>
    <string name="drunk_state_4">You have trouble moving around</string>
    <string name="drunk_state_5">You have an urge to talk, Beware!</string>
    <string name="drunk_state_6">You have trouble thinking</string>
    <string name="drunk_state_7">You are unconscious</string>
    <string name="drunk_state_8">You won\'t remember shit, almost dead</string>
    <string name="drunk_state_9">You died, Congrats!</string>

    <string name="concentration_format">%s‰ blood alcohol content</string>
    <string name="too_young_error">You\'re too young for this, homie</string>
    <string name="main_add_dring_header">What are you drinking?</string>
    <string name="input_details">fill in the details of the drink you\'re consuming</string>
    <string name="type">Drink type</string>
    <string name="volume">Volume</string>
    <string name="add">add</string>

    <string name="shot">Shot glass (%s)</string>
    <string name="vodka_glass">Vodka glass (%s)</string>
    <string name="beer_glass">Beer glass (%s)</string>
    <string name="pint">A pint (%s)</string>
    <string name="beer_glass_large">Large beer glass (%s)</string>
    <string name="red_wine_glass">Red wine glass (%s)</string>
    <string name="white_wine_glass">White wine glass (%s)</string>
    <string name="cognac_glass">Cognac glass (%s)</string>
    <string name="whiskey_glass">Whisk(e)y glass (%s)</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="add_name_prompt">Your name</string>
    <string name="personal">Personal information</string>
    <string name="change_weight_prompt">Your current weight</string>
    <string name="measurements">Measurements</string>
    <string name="units">Use imperial units</string>
    <string name="manage">Manage data</string>
    <string name="reset">Reset</string>
    <string name="reset_detailed">Permanently remove your all user data</string>
    <string name="name_key">name</string>
    <string name="weight_key">weight</string>
    <string name="units_key">units</string>
    <string name="reset_key">reset</string>
    <string name="settings">settings</string>
    <string name="you_are_sober">Sober</string>

    <string name="sober_channel_name">Sober chanel</string>
    <string name="sober_chanel_description">Get notifications when you are sober</string>

    <string name="sober_notification_title">You\'re sober</string>
    <string name="sober_notification_content">Hey, %s. Is it time to get wasted again?</string>

    <string name="too_weird_error">Your dimensions doesn\'t match out specifications, homie</string>
    <string name="i_ve_had_a_snack">I\'ve had a snack</string>
    <string name="too_drunk">You\'re too drunk, %s</string>

    <string name="minuts_ago">Recently</string>
    <string name="hours_ago">%dh.</string>
    <string name="days_ago">%dd.</string>
    <string name="long_time_ago">A while ago</string>
    <string name="fella">Fella</string>
    <string name="default_name">Fella</string>
    <string name="gender_key">gender</string>
    <string name="weight_in_pounds_key">weight_lbs</string>
    <string name="weight_in_kg_key">weight_kg</string>
    <string name="personal_information">Personal Information</string>
    <string name="your_weight">Your weight</string>
    <string name="your_name">Your name</string>
    <string name="your_gender">Your gender</string>
    <string name="ok">OK</string>
    <string name="name_edit">Name</string>
    <string name="name_edit_message">edit your name</string>
    <string name="weight_edit">Weight</string>
    <string name="weight_edit_message">edit your weight</string>
    <string name="data_removed">All your data has been removed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="googleAppKey">824477626067-fi3gabiceua6b5tics49bainijusngdg.apps.googleusercontent.com</string>
    <string name="sigh_in_string">Sign in</string>
    <string name="sign_in_subtext">Please, sign in with Google</string>
    <string name="your_gender_will_be_displayed_here">Your gender will be displayed here</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="yeah">Yes</string>
    <string name="nah">No</string>
    <string name="hi_tech_handle">—</string>
    <string name="bs_message">Here you enjoyed</string>
    <string name="gps_explanation">Please, consider allowing the usage of location services. We do not use it in any malicious way, nor we redistribute your location data. This data is used strictly for statistics, that You can access freely. To achieve full user experience, please grant that permission. By the way, your data can be removed from the application, if you so desire</string>

</resources>
