<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/personal">

        <EditTextPreference
            android:icon="@drawable/ic_baseline_account_circle_24"
            app:key="@string/name_key"
            app:title="@string/add_name_prompt"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:icon="@drawable/ic_baseline_speed_24"
            android:inputType="number"
            app:key="@string/weight_key"
            app:title="@string/change_weight_prompt"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/manage">

        <Preference
            android:icon="@drawable/ic_baseline_delete_forever_24"
            android:key="@string/reset_key"
            android:summary="@string/reset_detailed"
            android:title="@string/reset" />

    </PreferenceCategory>

</PreferenceScreen>
