<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddUserFragment">

    <TextView
        android:id="@+id/main_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:text="@string/main_add_dring_header"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:layout_constraintBottom_toTopOf="@+id/subprompt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/subprompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_details"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/type_input_wrapper"
        app:layout_constraintTop_toBottomOf="@+id/main_header" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/type_input_wrapper"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@+id/subprompt"
        tools:layout_editor_absoluteX="16dp">

        <AutoCompleteTextView
            android:id="@+id/type_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/volume_input_wrapper"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        app:layout_constraintBottom_toTopOf="@id/eaten_checkbox"
        app:layout_constraintTop_toBottomOf="@+id/type_input_wrapper"
        tools:layout_editor_absoluteX="16dp">

        <AutoCompleteTextView
            android:id="@+id/volume_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/volume"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/go_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/add"
        style="@style/Widget.MaterialComponents.Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <CheckBox
        android:id="@+id/eaten_checkbox"
        android:layout_width="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/volume_input_wrapper"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/volume_input_wrapper"/>

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/i_va_had_a_snack"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/eaten_checkbox"
        app:layout_constraintTop_toBottomOf="@id/volume_input_wrapper"
        app:layout_constraintLeft_toRightOf="@id/eaten_checkbox"/>
</androidx.constraintlayout.widget.ConstraintLayout>
