<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.AddUserFragment">

    <TextView
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintVertical_chainStyle="packed"
        android:id="@+id/app_name_text_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/AlcoholatorTextStyle"
        app:layout_constraintBottom_toTopOf="@id/hello_text_view"
        />

    <TextView
        app:layout_constraintTop_toBottomOf="@id/app_name_text_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/details_text_view"
        android:id="@+id/hello_text_view"
        android:text="@string/hello_string"
        android:layout_width="wrap_content"
        android:layout_marginTop="32dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        android:text="@string/tell_us_something_about_you"
        android:id="@+id/details_text_view"
        app:layout_constraintTop_toBottomOf="@id/hello_text_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/age_input_wrapper"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="16dp"
        android:layout_height="wrap_content"
        android:id="@+id/age_input_wrapper"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/details_text_view"
        app:layout_constraintBottom_toTopOf="@id/weight_input_wrapper">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="3"
            android:id="@+id/age_input"
            android:hint="@string/age"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginVertical="8dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:id="@+id/weight_input_wrapper"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/age_input_wrapper"
        app:layout_constraintBottom_toTopOf="@id/gender_input_wrapper">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="3"
            android:id="@+id/weight_input"
            android:hint="@string/weight"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="16dp"
        android:layout_height="wrap_content"
        android:id="@+id/gender_input_wrapper"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        app:layout_constraintTop_toBottomOf="@id/weight_input_wrapper"
        app:layout_constraintBottom_toBottomOf="parent">
        <AutoCompleteTextView
            android:inputType="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gender_input"
            android:hint="@string/gender"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="16dp"
        android:id="@+id/go_button"
        style="@style/Widget.MaterialComponents.Button"
        android:text="@string/go" />
</androidx.constraintlayout.widget.ConstraintLayout>
